Documentados en L5-Swagger los modelos de ClientePut y CompraPost
